Fix body overflow:hidden

--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -32,7 +32,6 @@ body {
   -ms-flex-line-pack: center;
       align-content: center;
   position: relative;
-  overflow: hidden;
 }
 
 body::before {
