--- a/styles/scss/base/_resets.scss
+++ b/styles/scss/base/_resets.scss
@@ -12,7 +12,6 @@ body{
 	display: flex;
 	align-content: center;
 	position: relative;
-	overflow: hidden;
 
 	&::before{
 		content:'';
